--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -11,8 +11,8 @@
     <string name="set_as">Festlegen als</string>
     <string name="value_copied_to_clipboard">Wert in Zwischenablage kopiert</string>
     <string name="unknown">Unbekannt</string>
-    <string name="always">Always</string>
-    <string name="never">Never</string>
+    <string name="always">Immer</string>
+    <string name="never">Nie</string>
 
     <!-- Search -->
     <string name="search">Suchen</string>
