--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -11,8 +11,8 @@
     <string name="set_as">Sæt som</string>
     <string name="value_copied_to_clipboard">Værdi kopieret til udklipsholder</string>
     <string name="unknown">Ukendt</string>
-    <string name="always">Always</string>
-    <string name="never">Never</string>
+    <string name="always">Altid</string>
+    <string name="never">Aldrig</string>
 
     <!-- Search -->
     <string name="search">Søg</string>
@@ -231,7 +231,7 @@
     <string name="settings">Indstillinger</string>
     <string name="customize_colors">Rediger farver</string>
     <string name="use_english_language">Use English language</string>
-    <string name="avoid_whats_new">Avoid showing What\'s New on startup</string>
+    <string name="avoid_whats_new">Vis ikke seneste ændringer ved opstart</string>
     <string name="show_hidden_items">Vis skjulte elementer</string>
     <string name="font_size">Skriftstørrelse</string>
     <string name="small">Lille</string>
