--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -11,8 +11,8 @@
     <string name="set_as">Sett som</string>
     <string name="value_copied_to_clipboard">Verdi kopiert til utklippstavle</string>
     <string name="unknown">Ukjent</string>
-    <string name="always">Always</string>
-    <string name="never">Never</string>
+    <string name="always">Alltid</string>
+    <string name="never">Aldri</string>
 
     <!-- Search -->
     <string name="search">Søk</string>
