add a new string for Details

--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -12,7 +12,8 @@
     <string name="value_copied_to_clipboard">Værdi kopieret til udklipsholder</string>
     <string name="unknown">Ukendt</string>
     <string name="always">Altid</string>
-    <string name="never">Aldrig</string>
+    <string name="never">Aldrig</string
+    <string name="details">Details</string>>
 
     <!-- Search -->
     <string name="search">Søg</string>
