--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -13,6 +13,7 @@
     <string name="unknown">Tidak di ketahui</string>
     <string name="always">Selalu</string>
     <string name="never">Tidak Pernah</string>
+    <string name="details">Details</string>
 
     <!-- Search -->
     <string name="search">Cari</string>
