--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -13,6 +13,7 @@
     <string name="unknown">Ukjent</string>
     <string name="always">Alltid</string>
     <string name="never">Aldri</string>
+    <string name="details">Details</string>
 
     <!-- Search -->
     <string name="search">Søk</string>
