--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -13,6 +13,7 @@
     <string name="unknown">Onbekend</string>
     <string name="always">Altijd</string>
     <string name="never">Nooit</string>
+    <string name="details">Details</string>
 
     <!-- Search -->
     <string name="search">Zoeken</string>
