--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -13,6 +13,7 @@
     <string name="unknown">Desconhecido</string>
     <string name="always">Sempre</string>
     <string name="never">Nunca</string>
+    <string name="details">Details</string>
 
     <!-- Search -->
     <string name="search">Pesquisar</string>
