--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -13,6 +13,7 @@
     <string name="unknown">Neznámy</string>
     <string name="always">Vždy</string>
     <string name="never">Nikdy</string>
+    <string name="details">Detaily</string>
 
     <!-- Search -->
     <string name="search">Hľadať</string>
