--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -13,6 +13,7 @@
     <string name="unknown">未知</string>
     <string name="always">总是</string>
     <string name="never">从不</string>
+    <string name="details">Details</string>
 
     <!-- Search -->
     <string name="search">搜索</string>
