--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -13,6 +13,7 @@
     <string name="unknown">Unbekannt</string>
     <string name="always">Immer</string>
     <string name="never">Nie</string>
+    <string name="details">Details</string>
 
     <!-- Search -->
     <string name="search">Suchen</string>
