--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -13,6 +13,7 @@
     <string name="unknown">Desconocido</string>
     <string name="always">Siempre</string>
     <string name="never">Nunca</string>
+    <string name="details">Details</string>
 
     <!-- Search -->
     <string name="search">Buscar</string>
