--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -13,6 +13,7 @@
     <string name="unknown">Sconosciuto</string>
     <string name="always">Sempre</string>
     <string name="never">Mai</string>
+    <string name="details">Details</string>
 
     <!-- Search -->
     <string name="search">Cerca</string>
