--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -13,6 +13,7 @@
     <string name="unknown">알 수 없음</string>
     <string name="always">Always</string>
     <string name="never">Never</string>
+    <string name="details">Details</string>
 
     <!-- Search -->
     <string name="search">검색</string>
