--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -13,6 +13,7 @@
     <string name="unknown">Bilinmeyen</string>
     <string name="always">Always</string>
     <string name="never">Never</string>
+    <string name="details">Details</string>
 
     <!-- Search -->
     <string name="search">Ara</string>
