--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -13,6 +13,7 @@
     <string name="unknown">未知的</string>
     <string name="always">Always</string>
     <string name="never">Never</string>
+    <string name="details">Details</string>
 
     <!-- Search -->
     <string name="search">搜尋</string>
