--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -13,7 +13,7 @@
     <string name="unknown">Ukendt</string>
     <string name="always">Altid</string>
     <string name="never">Aldrig</string>
-    <string name="details">Details</string>
+    <string name="details">Detaljer</string>
 
     <!-- Search -->
     <string name="search">Søg</string>
@@ -243,7 +243,7 @@
     <string name="password_protect_whole_app">Beskyt hele appen med en adgangskode</string>
     <string name="keep_last_modified">Kopi/flyt/omdøb skal ikke påvirke ændringstidspunktet</string>
     <string name="show_info_bubble">Show an info bubble at scrolling items by scrollbar dragging</string>
-    <string name="prevent_phone_from_sleeping">Prevent phone from sleeping</string>
+    <string name="prevent_phone_from_sleeping">Hold telefonen \'vågen\'</string>
 
     <!-- Setting sections -->
     <string name="visibility">Synlighed</string>
