--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -13,7 +13,7 @@
     <string name="unknown">Ukjent</string>
     <string name="always">Alltid</string>
     <string name="never">Aldri</string>
-    <string name="details">Details</string>
+    <string name="details">Detaljer</string>
 
     <!-- Search -->
     <string name="search">Søk</string>
@@ -243,7 +243,7 @@
     <string name="password_protect_whole_app">Passordbeskytt hele appen</string>
     <string name="keep_last_modified">Behold gammel Sist endret-verdi ved kopier/flytt/endre navn for filer</string>
     <string name="show_info_bubble">Vis en info-boble ved å dra i rullefeltet</string>
-    <string name="prevent_phone_from_sleeping">Prevent phone from sleeping</string>
+    <string name="prevent_phone_from_sleeping">Forhindre at telefonen går i hvilemodus</string>
 
     <!-- Setting sections -->
     <string name="visibility">Synlighet</string>
