show an OTG option at storage selector if an USB is connected

--- a/commons/src/main/res/values/strings.xml
+++ b/commons/src/main/res/values/strings.xml
@@ -262,6 +262,9 @@
     <string name="exporting_some_entries_failed">Exporting some entries failed</string>
     <string name="no_entries_for_exporting">No entries for exporting have been found</string>
 
+    <!-- OTG USB -->
+    <string name="otg">OTG</string>
+
     <!-- About -->
     <string name="about">About</string>
     <string name="website_label">For the source codes visit</string>
