--- a/commons/src/main/res/values-no/strings.xml
+++ b/commons/src/main/res/values-no/strings.xml
@@ -262,6 +262,11 @@
     <string name="exporting_some_entries_failed">Exporting some entries failed</string>
     <string name="no_entries_for_exporting">No entries for exporting have been found</string>
 
+    <!-- OTG devices -->
+    <string name="otg">OTG</string>
+    <string name="confirm_otg_storage_access_text">Please choose the root folder of the OTG device on the next screen, to grant access</string>
+    <string name="wrong_root_selected_otg">Wrong folder selected, please select the root folder of your OTG device</string>
+
     <!-- About -->
     <string name="about">Om</string>
     <string name="website_label">For the source codes visit</string>
