--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -261,6 +261,11 @@
     <string name="exporting_some_entries_failed">部分項目導出失敗</string>
     <string name="no_entries_for_exporting">未發現供導出的項目</string>
 
+    <!-- OTG devices -->
+    <string name="otg">OTG</string>
+    <string name="confirm_otg_storage_access_text">Please choose the root folder of the OTG device on the next screen, to grant access</string>
+    <string name="wrong_root_selected_otg">Wrong folder selected, please select the root folder of your OTG device</string>
+
     <!-- About -->
     <string name="about">關於</string>
     <string name="website_label">觀看原始碼</string>
