--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -43,6 +43,7 @@
     <string name="filename_cannot_be_empty">Nama File Tidak Boleh Kosong</string>
     <string name="filename_invalid_characters">Nama mengandung Karakter Tidak Di Dukung</string>
     <string name="extension_cannot_be_empty">Extension Tidak Boleh Kosong</string>
+    <string name="source_file_doesnt_exist">Source file %s doesn\'t exist</string>
 
     <!-- Copy / Move -->
     <string name="copy">Salin</string>
