--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -43,6 +43,7 @@
     <string name="filename_cannot_be_empty">파일명이 비어있으면 안됨</string>
     <string name="filename_invalid_characters">파일명에 사용할 수 없는 문자가 포함됨</string>
     <string name="extension_cannot_be_empty">확장자가 비어있으면 안됨</string>
+    <string name="source_file_doesnt_exist">Source file %s doesn\'t exist</string>
 
     <!-- Copy / Move -->
     <string name="copy">복사</string>
