--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -43,6 +43,7 @@
     <string name="filename_cannot_be_empty">Bestandsnaam mag niet leeg zijn</string>
     <string name="filename_invalid_characters">Bestandsnaam bevat ongeldige tekens</string>
     <string name="extension_cannot_be_empty">Extensie mag niet leeg zijn</string>
+    <string name="source_file_doesnt_exist">Source file %s doesn\'t exist</string>
 
     <!-- Copy / Move -->
     <string name="copy">Kopiëren</string>
