--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -43,6 +43,7 @@
     <string name="filename_cannot_be_empty">O nome do arquivo não pode ficar em branco</string>
     <string name="filename_invalid_characters">O nome do arquivo contém caracteres inválidos</string>
     <string name="extension_cannot_be_empty">A extensão não pode ficar em branco</string>
+    <string name="source_file_doesnt_exist">Source file %s doesn\'t exist</string>
 
     <!-- Copy / Move -->
     <string name="copy">Copiar</string>
