--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -43,6 +43,7 @@
     <string name="filename_cannot_be_empty">Názov súboru nemôže byť prázdny</string>
     <string name="filename_invalid_characters">Názov súboru obsahuje neplatné znaky</string>
     <string name="extension_cannot_be_empty">Prípona nesmie byť prázdna</string>
+    <string name="source_file_doesnt_exist">Zdrojový súbor %s neexistuje</string>
 
     <!-- Copy / Move -->
     <string name="copy">Kopírovať</string>
