--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -43,6 +43,7 @@
     <string name="filename_cannot_be_empty">Dosya adı boş olamaz</string>
     <string name="filename_invalid_characters">Dosya adı geçersiz karakterler içeriyor</string>
     <string name="extension_cannot_be_empty">Uzantı boş olamaz</string>
+    <string name="source_file_doesnt_exist">Source file %s doesn\'t exist</string>
 
     <!-- Copy / Move -->
     <string name="copy">Kopyala</string>
